--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             rel="stylesheet"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Scripto</title>
+        <title>TodoList</title>
         <link rel="icon" href="./img/icons/code-solid (1).svg" />
         <script
             src="https://cdn.jsdelivr.net/npm/sweetalert2@11.11.1/dist/sweetalert2.all.min.js"
